Updating admin registration page

--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -154,54 +154,21 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 
 ::::
 
-::: {.attn .hidden}
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-30-ns}
-{{< fa check >}} **Most course content exists**
-
-- Split 2 modules -> 4 modules
-- Expand workflow content section
-- Add model inventory content
-- Add missing content:
-  - Assigning users to workflows
-  - Mapping users to groups and roles
-:::
-
-::: {.w-30-ns}
-{{< fa x >}} **No videos**
-
-- Create 4 videos, one per module
-:::
-
-::: {.w-30-ns .pl4 .bl}
-**Notes**
-
-- FUTURE: Add admin UI coverage
-:::
-
-::::
-
-:::
-
 ::: {.attn}
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
 #### <sup>Module 1</sup><br> Onboarding Your Organization
 
-- Set up the basics of your organization
+- Set up the foundations of your organization
 - Set up groups, roles, & permissions
-- Invite users to your organization
-- Assign users to groups, roles, & permissions
+- Invite users and assign access to features
 :::
 
 ::: {.w-50-ns}
 #### <sup>Module 2</sup><br> Customizing Your Model Inventory
 
 - Configure model inventory fields
-- Customize document types
 - Customize documentation templates
 - Configure reusable blocks
 
