--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Onboarding<br>Your Organization"
+title: "Onboarding <br>Your Organization"
 subtitle: "Administrator Fundamentals — Module 1 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
@@ -30,24 +30,23 @@ skip_preview: true
 
 # Learning objectives {.center}
 
-_"As a **validator** who is new to {{< var vm.product >}}, I want to learn how to connect to a champion model in the {{< var validmind.platform >}} using the {{< var validmind.developer >}} installed in my local environment, preview the model's validation report template, and review submitted documentation for the model."_
+_"As an **administrator** who is new to {{< var vm.product >}}, I want to learn how to set up the {{< var validmind.platform >}} for our requirements, define granular access to {{< var vm.platform >}} features, and invite users to join our configured organization."_
 
 ::: {.tc}
 <br>
 This first module is part of a four-part series:
 <br><br>
-[Validator Fundamentals](/training/validator-fundamentals/validator-fundamentals-register.qmd){.button target="_blank"}
+[Administrator Fundamentals](/training/administrator-fundamentals/administrator-fundamentals-register.qmd){.button target="_blank"}
 :::
 
 
 ## Module 1 — Contents {.center}
 
 ::: {.f2}
-1. [{{< var vm.product >}} for model validation](#validmind-for-model-validation)
-2. [The {{< var validmind.platform >}}](#the-validmind-platform)
-3. [Connect to your champion model](#connect-to-a-model)
-4. [Preview your model's validation report template](#preview-validation-report)
-5. [Review submitted model documentation](#review-model-documentation)
+1. [The {{< var validmind.platform >}}](#the-validmind-platform)
+2. [Set up your organization](#set-up-your-organization)
+3. [Set up groups, roles, & permissions](#groups-roles-permissions)
+4. [Invite users to your organization](#invite-users)
 
 :::
 
@@ -61,7 +60,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 ### Registration
 
-To continue, you need to have been [onboarded](validator-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role.
+To continue, you need to have been [onboarded](administrator-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa hand >}} Customer Admin**]{.bubble} role.
 
 <br>
 
@@ -75,26 +74,15 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 1. Log in to check your access:
 
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns .tc}
-
-[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
-
-:::
-
-::: {.w-50-ns .tc}
+::: {.tc}
 [Log in to {{< var vm.product >}}](https://app.prod.validmind.ai){.button target="_blank"}
 :::
-
-::::
-
 
 ::: {.tc .f3}
 Be sure to return to this page afterwards.
 :::
 
-2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}: 
+2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}:
 
 ::: {.tc}
 <button class="button" onClick="window.location.reload();">Refresh Page</button>
@@ -106,55 +94,6 @@ Be sure to return to this page afterwards.
 <br>
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
-
-# ValidMind for model validation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
-## {.scrollable .center}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Jupyter Notebook series
-
-::: {.f3}
-These notebooks walk you through how to validate a model using {{< var vm.product >}}, complete with supporting test results attached as evidence to your validation report.
-
-:::
-:::
-
-::: {.column width="70%" .bl .pl4 .f3}
-### {{< var vm.product >}} for model validation
-
-Our series of four introductory notebooks for model validators include sample code and how-to information to get you started with {{< var vm.product >}}:
-
-1 — [Set up the {{< var validmind.developer >}} for validation](/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}<br>
-2 — [Start the model validation process](/notebooks/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}<br>
-3 — [Developing a potential challenger model](/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}<br>
-4 — [Finalize testing and reporting](/notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}<br>
-<br>
-
-::: {.f4 .pl3 .pr3 .embed}
-In this first module, we'll run through **1 — Set up the {{< var validmind.developer >}} for validation** together.
-:::
-
-:::
-::::
-
-<br>
-
-Let's start our journey with **1 — Set up the {{< var validmind.developer >}} for validation** on the next page. {{< fa hand-point-right >}}
-
-## {background-iframe="/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html" background-interactive="yes" data-preload="yes"}
-
-:::: {.slideover--r .three-quarters}
-**1 — Set up the {{< var validmind.developer >}} for validation**
-
-During this course, we'll run through these notebooks together, and at the end of your learning journey you'll have a fully supported sample validation report ready for review.
-
-For now, **scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
-<!-- USING THE VARIABLE BELOW MESSES UP THE ANCHOR LINK -->
 
 # The ValidMind Platform {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -232,7 +171,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Connect to a model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Set up your organization {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## Get your code snippet
 
@@ -296,7 +235,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-# Preview validation report {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Groups, roles, & permissions {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html#preview-the-validation-report-template" data-preload="yes"}
 
@@ -329,7 +268,7 @@ When you're done taking a look around, click [{{< fa chevron-right >}}]() to con
 
 ::::
 
-# Review model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Invite users {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable .center}
 
@@ -402,5 +341,5 @@ In this first module, you learned how to:
 Continue your model development journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[Running Data Quality Tests](running-data-quality-tests.html){.button target="_blank"}
+[Customizing Your Model Inventory](customizing-your-model-inventory.html){.button target="_blank"}
 :::
