Module 1 save point

--- a/site/guide/configuration/_set-up-your-organization-risk-areas.qmd
+++ b/site/guide/configuration/_set-up-your-organization-risk-areas.qmd
@@ -1,5 +1,3 @@
-#### Add risk areas
-
 :::: {.content-hidden unless-format="revealjs"}
 {{< include /guide/configuration/_risk-areas.qmd >}}
 
@@ -12,9 +10,9 @@
 
 1. Click **Add Risk Area** to save your changes.
 
-:::: {.content-hidden unless-format="revealjs"}
+<!-- :::: {.content-hidden unless-format="revealjs"}
 Once a risk area is added, you can then manage guidelines associated with that risk area and add those guidelines to validation templates: [Manage validation guidelines {{< fa hand-point-right >}}](/guide/model-validation/manage-validation-guidelines.qmd){target="_blank"}
-::::
+:::: -->
 
 :::: {.content-visible unless-format="revealjs"}
 #### Edit risk areas
