--- a/site/guide/configuration/_set-up-your-organization-use-cases.qmd
+++ b/site/guide/configuration/_set-up-your-organization-use-cases.qmd
@@ -3,24 +3,36 @@
 :::: {.content-hidden unless-format="revealjs"}
 {{< include /guide/configuration/_use-cases.qmd >}}
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
 1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+
+1. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
+
+1. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
+
+1. Click **{{< fa plus >}} Add Use Case** to save your changes.
+
+   After you save, the use case will be added as a new entry in alphabetical order.
 ::::
 
-1. Click **{{< fa plus >}} Add** under Use Cases.
-
-1. Fill in the use case **[title]{.smallcaps}** and **[category]{.smallcaps}** and click **{{< fa plus >}} Add Use Case** to confirm.
-
-    After you confirm, the use case will be added as a new entry in alphabetical order.
-
 :::: {.content-visible unless-format="revealjs"}
+1. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
+
+1. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
+
+1. Click **{{< fa plus >}} Add Use Case** to save your changes.
+
+   After you save, the use case will be added as a new entry in alphabetical order.
+
 #### Remove use cases
 
 ::: {.callout-important}
 In order to delete a use case, there must be no models associated with it.
 :::
 
-1. Hover over the use case until the **{{< fa trash-can >}}** appears.
+1. Hover over the use case until the **{{< fa ellipsis-vertical >}}** appears and click on it.
 
-1. If you are sure you want to remove the use case, click **{{< fa trash-can >}}** to delete it.
+2. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
 
 ::::
