--- a/site/guide/model-validation/manage-validation-guidelines.qmd
+++ b/site/guide/model-validation/manage-validation-guidelines.qmd
@@ -35,19 +35,15 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 
 ### Manage risk areas
 
+#### Add risk areas
+
 {{< include /guide/configuration/_set-up-your-organization-risk-areas.qmd >}}
 
 ### Manage guidelines
 
 #### Add guidelines
 
-1. Hover over the title of a risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
-
-2. Select **{{< fa plus >}} Add Guideline**.
-
-3. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
-
-4. Click **Add Guideline** to save your changes.
+{{< include /guide/model-validation/_add-validation-guidelines.qmd >}}
 
 #### Edit guidelines
 
