--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -104,9 +104,10 @@ Be sure to return to this page afterwards.
 
 From here, you can:
 
-- Keep track of your models in the customizable inventory ...
-- Review model documentation submitted by model developers ...
-- Assess the compliance of models by logging findings and test results as evidence on validation reports ...
+- Keep track of all your organization's models and their progress throughout the model lifecycle in the customizable inventory ...
+- Manage your organization's custom setup, including inventory fields and reusable templates and blocks ...
+- Manage users and user access to features ...
+- Set up workflows and attestations to streamline the governance of your models ...
 - View analytics on your models and findings, and create custom reports ...
 - ... and much more!
 
@@ -120,118 +121,125 @@ When you're done navigating around, click [{{< fa chevron-right >}}]() to contin
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--r}
-**Welcome to the {{< fa cubes >}} Inventory**
+:::: {.slideover--l}
+**Welcome to {{< fa gear >}} Settings**
 
-Use the model inventory to track comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit your needs.
+Your hub for configuring and managing your organization, from user invitations to reusable templates, and more.
 
 ::: {.embed}
-In a usual model lifecycle, a champion model will have been independently registered in your model inventory and submitted to you for validation.
-
-For this training course, we'll have you register a dummy model via the **{{< fa plus >}} Register Model** modal and assign yourself as the validator to familiarize you with the {{< var validmind.platform >}} interface.
+Default settings are provided for you as examples, but ideally your settings should reflect your organization's custom needs and governance goals.
 :::
 
-**Let's register a model together** for use with validation on the next page. {{< fa hand-point-right >}}
-
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory/?register=open" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--r .three-quarters .auto-collapse-10}
-**Register a binary classification model**
-
-1. Select the option for a new model:
-- **Documentation template** — <br>`Binary classification`
-- **Use case** — <br>`Attrition/Churn Management`<br><br>
-  You can fill in other options according to your preference.
-2. Click **{{< fa plus >}} Register Model** to add the model to your inventory.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .auto-collapse-10}
-::: {.tc}
-**Assign validator credentials**
-
-:::
-
-In order to log tests as a validator instead of as a developer, we'll need to adjust your **model stakeholder** permissions:
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. Remove yourself as a model owner by clicking on the **[owners]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
-3. Remove yourself as a developer by clicking on the **[developers]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
-4. Add yourself as a validator by clicking on the **[validators]{.smallcaps}** tile, and selecting your name from the drop-down menu. Click **Save** to apply your changes to that role.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
+**Learn how to set up the basic foundations for your organization** in the next section. {{< fa hand-point-right >}}
 
 ::::
 
 # Set up your organization {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## Get your code snippet
+## {.scrollable}
 
 :::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Business units & use cases
 
-::: {.column width="80%"}
-
-<!-- FOR COPYING THE CODE SNIPPET WE NEED TO USE THIS IFRAME WORKAROUND -->
-
-<div style="zoom: 0.6; overflow: hidden;">
-  <iframe 
-    src="https://app.prod.validmind.ai/model-inventory" 
-    width="100%" 
-    height="750" 
-    style="border: 1px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;"
-    data-preload="yes" 
-    sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
-    allow="clipboard-read; clipboard-write">
-  </iframe>
-</div>
-
+::: {.tc}
+[Learn more ...](/guide/configuration/set-up-your-organization.qmd){.button target="_blank"}
 :::
 
-::: {.column width="20%" .f4}
-
-::: {.f5}
-{{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your validation environment:
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **Getting Started**.
-3. Locate the code snippet and click **Copy snippet to clipboard**.
-
+<br>Try it **live** on the next pages. {{< fa hand-point-right >}}
 :::
 
-When you're done, click [{{< fa chevron-right >}}]() to continue.
+::: {.column width="70%" .bl .pl4 .f3}
+
+Get your organization ready for use by first defining business units and use cases:
+
+::: {.panel-tabset}
+
+{{< include /guide/configuration/_set-up-your-organization-business-units.qmd >}}
+
+{{< include /guide/configuration/_set-up-your-organization-use-cases.qmd >}}
+
+:::
 
 :::
 
 ::::
 
-:::: {.tc .f6 .embed}
-**Can't load the {{< var validmind.platform >}}?**
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-Make sure you're logged in and have refreshed the page in a Chromium-based web browser.
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Add a business unit**
+:::
+
+1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+1. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
+1. Enter in your **[business unit name]{.smallcaps}**.
+1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Add a use case**
+:::
+
+1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+1. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
+1. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
+1. Click **{{< fa plus >}} Add Use Case** to save your changes.
+
+::::
+
+
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Risk areas & validation guidelines
+
+::: {.tc}
+[Learn more ...](/guide/model-validation/manage-validation-guidelines.html#set-up-validation-guidelines){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+Next, define your risk areas and validation guidelines:
+
+::: {.panel-tabset}
+
+### 1. Add risk areas
+
+{{< include /guide/configuration/_set-up-your-organization-risk-areas.qmd >}}
+
+### 2. Add validation guidelines
+
+{{< include /guide/model-validation/_add-validation-guidelines.qmd >}}
 
 :::
 
-## {background-iframe="/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.html#install-the-validmind-library" data-preload="yes"}
+:::
 
-:::: {.slideover--r .three-quarters}
-**Install & initialize the {{< var validmind.developer >}}**
+::::
 
-With your code snippet copied to your clipboard:
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
-1. Open **1 — Set up the {{< var validmind.developer >}} for validation**: [{{< fa square-arrow-up-right >}} JupyterHub]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb){target="_blank"}
-2. Run all the cells under the Setting up sections:
-    - **Install the {{< var validmind.developer >}}**
-    - **Initialize the {{< var validmind.developer >}}**
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Add a risk area & validation guideline**
+:::
 
-When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
+1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+1. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
+1. Enter in your **[business unit name]{.smallcaps}**.
+1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 
 ::::
 
