--- a/site/guide/configuration/_set-up-your-organization-business-units.qmd
+++ b/site/guide/configuration/_set-up-your-organization-business-units.qmd
@@ -3,21 +3,34 @@
 :::: {.content-hidden unless-format="revealjs"}
 {{< include /guide/configuration/_business-units.qmd >}}
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
 1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
+
+1. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
+
+1. Enter in your **[business unit name]{.smallcaps}**.
+
+1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
+
+   After you save, the business unit will be added as a new entry in alphabetical order.
 ::::
 
-1. Type the new business unit name in the dialog box under **Business Units**.
-
-1. Click **{{< fa plus >}} Add** to confirm.
-
-   After you confirm, the business unit will be added as a new entry in alphabetical order.
-
 :::: {.content-visible unless-format="revealjs"}
-#### Edit business units
-Hover over the business unit to rename or delete the unit:
 
-   - Click {{< fa pencil >}} to rename the business unit. Click {{< fa check >}} to save your changes.
-   - Click {{< fa trash-can >}} to remove the business unit.
+1. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
+
+1. Enter in your **[business unit name]{.smallcaps}**.
+
+1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
+
+   After you save, the business unit will be added as a new entry in alphabetical order.
+
+#### Edit business units
+Hover over the business unit until the **{{< fa ellipsis-vertical >}}** appears and click on it to rename or delete the unit:
+
+   - Click **{{< fa pencil >}} Edit Details** to rename the business unit. Click **Save** to apply your changes.
+   - Click [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
 
 ::: {.callout-important}
 In order to delete a business unit, there must be no models attached to that unit.
