--- a/site/index.qmd
+++ b/site/index.qmd
@@ -129,6 +129,13 @@ a:hover {
   color: #222425;
   text-decoration: none;
 }
+.column-screen {
+  background:linear-gradient(to bottom, #EDF9FA 80%, #ffffff); 
+  width: 100vw;       /* Full viewport width */
+  height: 100vh;      /* Full viewport height */
+  margin: 0;
+  padding: 0;
+}
 
 </style>
 ```
