--- a/site/guide/model-validation/_add-validation-guidelines.qmd
+++ b/site/guide/model-validation/_add-validation-guidelines.qmd
@@ -1,9 +1,9 @@
-Validation guidelines ensure that models are accurate, reliable, and fit for their intended purpose by outlining standards for assessing their conceptual soundness, implementation, and performance. Guidelines also establish a structured approach for identifying and mitigating model risks, ensuring compliance with regulatory and internal governance requirements.
 
-1. Hover over the title of a risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+
+1. Hover over the risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
 1. Select **{{< fa plus >}} Add Guideline**.
 
 1. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
 
-1. Click **Add Guideline** to save your changes.
+1. Click **Add Guideline** to insert your guideline to that risk area.
