--- a/site/guide/model-validation/manage-validation-guidelines.qmd
+++ b/site/guide/model-validation/manage-validation-guidelines.qmd
@@ -18,13 +18,13 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^1] 
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^1]
 
 :::
 
 ## Set up validation guidelines
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 2. Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**.
 
@@ -35,11 +35,37 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 
 ### Manage risk areas
 
+{{< include /guide/configuration/_risk-areas.qmd >}}
+
 #### Add risk areas
 
-{{< include /guide/configuration/_set-up-your-organization-risk-areas.qmd >}}
+{{< include /guide/configuration/_add-risk-areas.qmd >}}
+
+#### Edit risk areas
+
+1. Hover over the risk area you want to edit until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+
+1. Select **{{< fa pencil>}} Edit Risk Area**.
+
+1. Make your desired changes to the risk area's **[name]{.smallcaps}** and **[description]{.smallcaps}**.
+
+1. Click **Save Risk Area** to apply your changes.
+
+#### Delete risk areas
+
+::: {.callout-important}
+Any guidelines associated with a risk area will need to be deleted before the risk area can be removed.
+:::
+
+1. Hover over the risk area you want to edit until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+
+1. Select [**{{< fa trash-can>}} Delete Risk Area**]{.red}.
+
+    Once you confirm, that risk area will be removed.
 
 ### Manage guidelines
+
+{{< include /guide/model-validation/_validation-guidelines.qmd >}}
 
 #### Add guidelines
 
@@ -49,13 +75,13 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 
 1. Expand the menu for a risk area by clicking **{{< fa chevron-down >}}**.
 
-2. Once you've located the guideline you'd like to edit, hover over the title of the guideline until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+2. Hover over the guideline you want to edit until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
 3. Select **{{< fa pencil>}} Edit Guideline**.
 
 4. Make your desired changes to the risk area's **[title]{.smallcaps}** and **[description]{.smallcaps}**.
 
-5. Click **Save Guideline** to save your changes.
+5. Click **Save Guideline** to apply your changes.
 
 #### Delete guidelines
 
@@ -65,7 +91,7 @@ You are also unable to delete any guidelines with assessments in validation repo
 
 1. Expand the menu for a risk area by clicking **{{< fa chevron-down >}}**.
 
-2. Once you've located the guideline you'd like to delete, hover over the title of the guideline until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+2. Hover over the guideline you want to delete until the  **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
 3. Select [**{{< fa trash-can>}} Delete Guideline**]{.red}.
 
@@ -81,17 +107,17 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has all these per
 
 2. Under Workplace Settings, select **{{< fa clone >}} Templates**.[^5]
 
-3. Select the **Validation Report** tab, then locate the template you want to edit.
+3. Select the **Validation Report** tab, then click on the template you want to edit.
 
 4. On the template details page, click **{{< fa pencil >}} Edit Outline**.  
 
 5. For the section you'd like to add a guideline to, click **{{< fa plus >}}** and select **{{< fa circle-check >}} Guideline Block** under [content]{.smallcaps}.
 
-6. Toggle the guidelines you'd like to add to that section, then click **{{< fa plus >}} Add # Guideline(s)** to save your changes.
+6. Select the guidelines you'd like to add to that section, then click **{{< fa plus >}} Add # Guideline(s)** to save your changes.
 
 7. When you're done, click **Create New Version** to view a side-by-side comparison of your changes with the previous version:
    - Add a description in **[version notes]{.smallcaps}** to track your changes.
-   - Click **Save** to save the new version.
+   - Click **Save** to create the new version.
 
     Once saved, your new template version with the modified guidelines becomes available for use with your validation reports.
 
