Editing set-up-your-organization.qmd

--- a/site/guide/configuration/_add-business-units.qmd
+++ b/site/guide/configuration/_add-business-units.qmd
@@ -13,7 +13,7 @@
 
 1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 
-   After you save, the business unit will be added as a new entry in alphabetical order.
+   After you save, confirm that the business unit was added as a new entry in alphabetical order.
 ::::
 
 :::: {.content-visible unless-format="revealjs"}
@@ -24,16 +24,6 @@
 
 1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 
-   After you save, the business unit will be added as a new entry in alphabetical order.
-
-#### Edit business units
-Hover over the business unit until the **{{< fa ellipsis-vertical >}}** appears and click on it to rename or delete the unit:
-
-   - Click **{{< fa pencil >}} Edit Details** to rename the business unit. Click **Save** to apply your changes.
-   - Click [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
-
-::: {.callout-important}
-In order to delete a business unit, there must be no models attached to that unit.
-:::
+   After you save, confirm that the business unit was added as a new entry in alphabetical order..
 
 ::::
