--- a/site/guide/configuration/_add-use-cases.qmd
+++ b/site/guide/configuration/_add-use-cases.qmd
@@ -13,7 +13,7 @@
 
 1. Click **{{< fa plus >}} Add Use Case** to save your changes.
 
-   After you save, the use case will be added as a new entry in alphabetical order.
+   After you save, confirm that the use case was added as a new entry in alphabetical order.
 ::::
 
 :::: {.content-visible unless-format="revealjs"}
@@ -23,16 +23,6 @@
 
 1. Click **{{< fa plus >}} Add Use Case** to save your changes.
 
-   After you save, the use case will be added as a new entry in alphabetical order.
-
-#### Remove use cases
-
-::: {.callout-important}
-In order to delete a use case, there must be no models associated with it.
-:::
-
-1. Hover over the use case until the **{{< fa ellipsis-vertical >}}** appears and click on it.
-
-2. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
+   After you save, confirm that the use case was added as a new entry in alphabetical order.
 
 ::::
