--- a/site/guide/configuration/set-up-your-organization.qmd
+++ b/site/guide/configuration/set-up-your-organization.qmd
@@ -26,7 +26,17 @@ This task involves managing organizations within {{< var vm.product >}}, allowin
 
 1. Add, edit and delete business units as required.
 
-{{< include _set-up-your-organization-business-units.qmd >}}
+{{< include _add-business-units.qmd >}}
+
+#### Edit business units
+Hover over the business unit until the **{{< fa ellipsis-vertical >}}** appears and click on it to rename or delete the unit:
+
+   - Click **{{< fa pencil >}} Edit Details** to rename the business unit. Click **Save** to apply your changes.
+   - Click [**{{< fa trash-can >}} Delete Business Unit**]{.red} to remove the business unit.
+
+::: {.callout-important}
+In order to delete a business unit, there must be no models attached to that unit.
+:::
 
 ## Manage use cases
 
@@ -38,11 +48,21 @@ This task involves managing organizations within {{< var vm.product >}}, allowin
 
 1. Add or and delete use cases as required.
 
-{{< include _set-up-your-organization-use-cases.qmd >}}
+{{< include _add-use-cases.qmd >}}
+
+#### Remove use cases
+
+::: {.callout-important}
+In order to delete a use case, there must be no models associated with it.
+:::
+
+1. Hover over the use case until the **{{< fa ellipsis-vertical >}}** appears and click on it.
+
+2. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
 
 ## Manage risk areas
 
-{{< include _risk-areas.qmd >}}
+{{< include /guide/model-validation/_risk-areas.qmd >}}
 
 ::: {.callout title="Risk areas are set up together with your validation guidelines attached to validation reports."}
 [Set up validation guidelines {{< fa hand-point-right >}}](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines)
