--- a/site/guide/model-validation/_add-validation-guidelines.qmd
+++ b/site/guide/model-validation/_add-validation-guidelines.qmd
@@ -7,3 +7,5 @@
 1. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
 
 1. Click **Add Guideline** to insert your guideline to that risk area.
+
+    Confirm that your guideline was added to your risk area in alphabetical order.
