Module 1 save point

--- a/site/guide/configuration/set-up-your-organization.qmd
+++ b/site/guide/configuration/set-up-your-organization.qmd
@@ -65,7 +65,9 @@ In order to delete a use case, there must be no models associated with it.
 {{< include /guide/model-validation/_risk-areas.qmd >}}
 
 ::: {.callout title="Risk areas are set up together with your validation guidelines attached to validation reports."}
-[Set up validation guidelines {{< fa hand-point-right >}}](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines)
+{{< include /guide/model-validation/_validation-guidelines.qmd >}}
+
+[Set up validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines){.button}
 :::
 
 ## What's next
