--- a/site/guide/model-validation/_add-validation-guidelines.qmd
+++ b/site/guide/model-validation/_add-validation-guidelines.qmd
@@ -1,4 +1,9 @@
+:::: {.content-hidden unless-format="revealjs"}
+{{< include /guide/model-validation/_validation-guidelines.qmd >}}
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**.
 
 1. Hover over the risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
@@ -8,4 +13,17 @@
 
 1. Click **Add Guideline** to insert your guideline to that risk area.
 
-    Confirm that your guideline was added to your risk area in alphabetical order.
+    After you save, confirm that your guideline was added to your risk area in alphabetical order.
+::::
+
+:::: {.content-visible unless-format="revealjs"}
+1. Hover over the risk area you want to add a guideline to until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+
+1. Select **{{< fa plus >}} Add Guideline**.
+
+1. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
+
+1. Click **Add Guideline** to insert your guideline to that risk area.
+
+    After you save, confirm that your guideline was added to your risk area in alphabetical order.
+::::
