--- a/site/guide/model-validation/manage-validation-guidelines.qmd
+++ b/site/guide/model-validation/manage-validation-guidelines.qmd
@@ -57,7 +57,7 @@ To set up validation guidelines, you'll need to complete these two steps in sequ
 Any guidelines associated with a risk area will need to be deleted before the risk area can be removed.
 :::
 
-1. Hover over the risk area you want to edit until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+1. Hover over the risk area you want to remove until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
 1. Select [**{{< fa trash-can>}} Delete Risk Area**]{.red}.
 
