--- a/site/guide/model-validation/_add-risk-areas.qmd
+++ b/site/guide/model-validation/_add-risk-areas.qmd
@@ -1,8 +1,9 @@
 :::: {.content-hidden unless-format="revealjs"}
 {{< include /guide/model-validation/_risk-areas.qmd >}}
 
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
 1. Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**.
-::::
 
 1. Click **{{< fa plus >}} Add Risk Area**.
 
@@ -10,4 +11,16 @@
 
 1. Click **Add Risk Area** to save your changes.
 
-    Confirm that your risk area was added to the list in alphabetical order.
+    After you save, confirm that your risk area was added to the list in alphabetical order.
+::::
+
+:::: {.content-visible unless-format="revealjs"}
+1. Click **{{< fa plus >}} Add Risk Area**.
+
+1. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
+
+1. Click **Add Risk Area** to save your changes.
+
+    After you save, confirm that your risk area was added to the list in alphabetical order.
+
+::::
