Module 1 save point

--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -175,9 +175,9 @@ Get your organization ready for use by first defining business units and use cas
 :::
 
 1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
-1. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
-1. Enter in your **[business unit name]{.smallcaps}**.
-1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
+2. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
+3. Enter in your **[business unit name]{.smallcaps}**.
+4. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 
 ::::
 
@@ -189,9 +189,9 @@ Get your organization ready for use by first defining business units and use cas
 :::
 
 1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
-1. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
-1. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
-1. Click **{{< fa plus >}} Add Use Case** to save your changes.
+2. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
+3. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
+4. Click **{{< fa plus >}} Add Use Case** to save your changes.
 
 ::::
 
@@ -236,10 +236,15 @@ Next, define your risk areas and validation guidelines:
 **Add a risk area & validation guideline**
 :::
 
-1. Under Workplace Settings, select **{{< fa building-columns >}} Organization**.
-1. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
-1. Enter in your **[business unit name]{.smallcaps}**.
-1. Click **{{< fa plus >}} Add Business Unit** to save your changes.
+Under Workplace Settings, select **{{< fa align-left >}} Risk Areas & Validation Guidelines**.
+
+1. Click **{{< fa plus >}} Add Risk Area**.
+2. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
+3. Click **Add Risk Area** to create your risk area.
+4. Hover over the risk area you added above until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
+5. Select **{{< fa plus >}} Add Guideline**.
+6. Provide a **[title]{.smallcaps}** and **[description]{.smallcaps}** for your guideline.
+7. Click **Add Guideline** to insert your guideline to your risk area.
 
 ::::
 
