--- a/site/guide/model-validation/_add-risk-areas.qmd
+++ b/site/guide/model-validation/_add-risk-areas.qmd
@@ -9,7 +9,7 @@
 
 1. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
 
-1. Click **Add Risk Area** to save your changes.
+1. Click **Add Risk Area** to create your risk area.
 
     After you save, confirm that your risk area was added to the list in alphabetical order.
 ::::
@@ -19,7 +19,7 @@
 
 1. Provide a **[name]{.smallcaps}** and **[description]{.smallcaps}** for your risk area.
 
-1. Click **Add Risk Area** to save your changes.
+1. Click **Add Risk Area** to create your risk area.
 
     After you save, confirm that your risk area was added to the list in alphabetical order.
 
